# TaskTrack-CLI

./: ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  STATUS.md  TRADEOFFS.md  app.py  logs  pyproject.toml  pyptoject.toml  tasks.json
src/task/: app.py  cli.py  logs
src/task/models/: task.py
src/task/repositories/: json_repo.py
src/task/service/: controller.py
